[gd_scene load_steps=6 format=3 uid="uid://12tkw3pf520q"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_jkuks"]
[ext_resource type="SystemFont" uid="uid://dth5n6d8288l3" path="res://assets/In_Game_Hud.tres" id="2_gy8hb"]
[ext_resource type="PackedScene" uid="uid://dh1u7ldlbr31y" path="res://scenes/sounds/HoverSound.tscn" id="3_6i5g1"]
[ext_resource type="PackedScene" uid="uid://dhv0wwe5g6up3" path="res://scenes/sounds/ClickSound.tscn" id="4_n008g"]
[ext_resource type="AudioStream" uid="uid://c054icrgex6f0" path="res://assets/sound/background/magic space.mp3" id="4_n516w"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 15.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkuks")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1164.0
offset_bottom = 661.0
color = Color(0.194349, 0.194349, 0.194349, 1)

[node name="Label" type="Label" parent="BackGround"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 100.0
offset_right = 20.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_gy8hb")
theme_override_font_sizes/font_size = 48
text = "Title of Game"

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1164.0
offset_bottom = 655.0
alignment = 1

[node name="PlayButton" type="Button" parent="UI"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="UI"]
layout_mode = 2
text = "Options
"

[node name="ShopButton" type="Button" parent="UI"]
layout_mode = 2
text = "Shop
"

[node name="ControlsButton" type="Button" parent="UI"]
layout_mode = 2
text = "Controls
"

[node name="StartScreenMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n516w")

[node name="HoverSound" parent="." instance=ExtResource("3_6i5g1")]

[node name="ClickSound" parent="." instance=ExtResource("4_n008g")]

[connection signal="pressed" from="UI/OptionsButton" to="." method="_on_options_button_pressed"]
